<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/questionRowLayout"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical">

    <androidx.cardview.widget.CardView
        android:id="@+id/card_view_question"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        app:cardCornerRadius="4dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_margin="15dp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent">

            <TextView
                android:id="@+id/question1"
                android:layout_width="332dp"
                android:layout_height="82dp"
                android:layout_marginStart="16dp"
                android:layout_marginTop="36dp"
                android:text="TextView"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <RadioGroup
                android:id="@+id/radioGroup"
                android:layout_width="317dp"
                android:layout_height="36dp"
                android:layout_marginTop="21dp"
                android:orientation="horizontal"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.511"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/question1">

                <RadioButton
                    android:id="@+id/radioButton"
                    android:layout_width="210dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="0.1"
                    android:text="@string/radioButton" />

                <RadioButton
                    android:id="@+id/radioButton2"
                    android:layout_width="210dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="0.1"
                    android:text="@string/radioButton1" />

                <RadioButton
                    android:id="@+id/radioButton3"
                    android:layout_width="210dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="0.1"
                    android:text="@string/radioButton2" />

                <RadioButton
                    android:id="@+id/radioButton4"
                    android:layout_width="210dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="0.1"
                    android:text="@string/radioButton3" />

                <RadioButton
                    android:id="@+id/radioButton5"
                    android:layout_width="210dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="0.1"
                    android:text="@string/radioButton4" />
            </RadioGroup>

            <TextView
                android:id="@+id/noEvidenceText"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="16dp"
                android:layout_marginTop="20dp"
                android:text="@string/noEvidenceText"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/radioGroup" />

            <TextView
                android:id="@+id/superiorText"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp"
                android:layout_marginEnd="16dp"
                android:text="@string/superiorText"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/radioGroup" />

        </androidx.constraintlayout.widget.ConstraintLayout>
    </androidx.cardview.widget.CardView>
</androidx.constraintlayout.widget.ConstraintLayout>