<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <TextView
        android:id="@+id/textView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="32dp"
        android:layout_marginTop="136dp"
        android:text="@string/UserName"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/phoneNumberText"
        android:layout_width="175dp"
        android:layout_height="30dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="136dp"
        android:hint="@string/PhoneNo"
        app:layout_constraintStart_toEndOf="@+id/textView"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/textView3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="32dp"
        android:layout_marginTop="44dp"
        android:text="@string/OTP"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView" />

    <Button
        android:id="@+id/sendCodeButton"
        android:layout_width="91dp"
        android:layout_height="52dp"
        android:layout_marginStart="19dp"
        android:layout_marginTop="183dp"
        android:text="send code"
        app:layout_constraintStart_toEndOf="@+id/inputCode"
        app:layout_constraintTop_toTopOf="parent" />

    <EditText
        android:id="@+id/inputCode"
        android:layout_width="170dp"
        android:layout_height="43dp"
        android:layout_marginStart="56dp"
        android:layout_marginTop="26dp"
        android:ems="10"
        android:hint="OTP Code"
        android:inputType="textPersonName"
        app:layout_constraintStart_toEndOf="@+id/textView3"
        app:layout_constraintTop_toBottomOf="@+id/phoneNumberText" />

    <ProgressBar
        android:id="@+id/progressBarCircle"
        style="?android:attr/progressBarStyle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="148dp"
        android:layout_marginTop="36dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/inputCode" />


    <Button
        android:id="@+id/signin"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="148dp"
        android:layout_marginTop="88dp"
        android:text="@string/Login"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/progressBarCircle" />
</androidx.constraintlayout.widget.ConstraintLayout>